--- a/backend/blog/templates/blog/p.html
+++ b/backend/blog/templates/blog/p.html
@@ -1,14 +1,20 @@
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Title</title>
 </head>
 <body>
 
-<form action="." method="post" enctype="multipart/form-data">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="GO">
-</form>
+<div class="container">
+
+
+    {% crispy form %}
+{#    <div id='form-errors'>{{ form_errors }}</div>#}
+</div>
+
 </body>
 </html>
