send email confirm to celery

--- a/backend/blog/templates/blog/index.html
+++ b/backend/blog/templates/blog/index.html
@@ -2,48 +2,47 @@
 
 {% block content %}
 
-<div class="row">
-        <div class="col-sm-6 col-lg-4 mb-3">
-            <div class="card mb-3 h-100">
+    {#  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Card image cap">#}
 
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-3">
-            <div class="card mb-3 h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-lg-4 mb-3">
-            <div class="card mb-3 h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-            </div>
-        </div>
+        <div class="row">
+            <div class="col-sm-6 mt-4">
+                <div class="card  h-100">
 
-        <div class="col-sm-6 col-lg-4 mb-3">
-            <div class="card mb-3 h-100">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+                        <a href="{% url 'users:signup' %}"
+                           class="btn btn-primary stretched-link">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 mt-4">
+                <div class="card  h-100">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+                        <a href="https://mdbootstrap.com/education/bootstrap/quick-start/"
+                           class="btn btn-primary stretched-link">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 mt-4">
+                <div class="card  h-100">
+
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+                        <a href="https://mdbootstrap.com/education/bootstrap/quick-start/"
+                           class="btn btn-primary stretched-link">Go somewhere</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 {% endblock %}
