send passw reset to celery

--- a/backend/users/templates/users/password_reset_email.html
+++ b/backend/users/templates/users/password_reset_email.html
@@ -9,7 +9,7 @@
         {% endblock %}
     </h3>
     <h3>
-        {% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+        {% trans "Your username, in case you've forgotten:" %} {{ username }}
     </h3>
     <h3>
         {% trans "Thanks for using our site!" %}
