--- a/backend/users/templates/users/password_reset_done.html
+++ b/backend/users/templates/users/password_reset_done.html
@@ -7,4 +7,5 @@
 
     <h3>{% trans "If you don't receive an email, please make sure you've entered the address you registered with, and check your spam folder." %}</h3>
 
+    <h3>Go <a href="{% url 'home' %}">home</a></h3>
 {% endblock %}
