--- a/backend/users/templates/users/password_reset_email.html
+++ b/backend/users/templates/users/password_reset_email.html
@@ -5,7 +5,7 @@
     <h3>{% trans "Please go to the following page and choose a new password:" %}</h3>
     <h3>
         {% block reset_link %}
-            {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+            {{ protocol }}://{{ domain }}{% url 'users:password_reset_confirm' uidb64=uid token=token %}
         {% endblock %}
     </h3>
     <h3>
