add hdr ftr not custom

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -19,13 +19,20 @@
 
 <!-- POST-LIST -->
 
+{% include 'header.html' %}
+
 <div class="container">
+
     {% block content %}{% endblock %}
+
 </div>
+
+{% include 'footer.html' %}
+
 
 {% block extra_js %}
 
-     <script>
+    <script>
 
         function getCookie(name) {
             var cookieValue = null;
@@ -51,7 +58,7 @@
         }
 
         $.ajaxSetup({
-            beforeSend: function(xhr, settings) {
+            beforeSend: function (xhr, settings) {
                 if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
                     xhr.setRequestHeader("X-CSRFToken", csrftoken);
                 }
