--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -12,7 +12,28 @@
     <script src="{% static 'js/general.js' %}"></script>
 
 
-    <script>
+
+
+
+</head>
+<header>
+
+</header>
+<body>
+
+{% include 'header.html' %}
+
+<div class="container">
+
+    {% block content %}{% endblock %}
+
+</div>
+
+{% include 'footer.html' %}
+
+
+
+<script>
 
         function getCookie(name) {
             var cookieValue = null;
@@ -46,20 +67,6 @@
         });
 
     </script>
-
-
-</head>
-<header>
-
-</header>
-<body>
-
-<div class="container">
-    {% block content %}
-
-
-    {% endblock %}
-</div>
 
 </body>
 </html>
