--- a/backend/templates/header.html
+++ b/backend/templates/header.html
@@ -5,15 +5,18 @@
             aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Green+</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
-        <a class="nav-link text-light btn" href="#">Link</a>
-        <button class="text-light btn my-2 my-sm-0 bg-success" type="submit">Search</button>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0"></ul>
+        <a class="nav-link text-light" href="#">Link</a>
+            {% if request.user.is_authenticated %}
+        <a class="text-light btn my-2 my-sm-0 bg-success" href="{% url 'users:logout' %}" type="submit">
+            Logout
+            {% else %}
+        <a class="text-light btn my-2 my-sm-0 bg-success btn-link" href="{% url 'users:login' %}" type="submit">
+            Login
+            {% endif %}
+        </a>
     </div>
 </nav>
