--- a/backend/templates/header.html
+++ b/backend/templates/header.html
@@ -9,7 +9,7 @@
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0"></ul>
-        <a class="nav-link text-light" href="#">Link</a>
+        <a class="nav-link text-light" href="{% url 'home' %}">Home</a>
             {% if request.user.is_authenticated %}
         <a class="text-light btn my-2 my-sm-0 bg-success" href="{% url 'users:logout' %}" type="submit">
             Logout
