--- a/backend/blog/templates/blog/meeting_remind.html
+++ b/backend/blog/templates/blog/meeting_remind.html
@@ -1,4 +1,4 @@
 {% autoescape off %}
-    <h1>Meting time</h1>
-    <h2>Hi {{ user.username }} don not forget about meeting at {{ meet_date }}</h2>
+    <h1>Meeeeeeting time</h1>
+    <h2>Hi {{ user.username }} do not forget about meeting {{ title }} at {{ meet_date }}</h2>
 {% endautoescape %}
