--- a/backend/templates/footer.html
+++ b/backend/templates/footer.html
@@ -1,15 +1,6 @@
 {% load static %}
 
-{#<style>#}
-{#    footer {#}
-{#    position: fixed;#}
-{#    height: 100px;#}
-{#    bottom: 0;#}
-{#    width: 100%;#}
-{#}#}
-{#</style>#}
-
-<footer class="page-footer font-small blue fixed-bottom">
+<footer class="page-footer font-small blue">
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
