--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
@@ -10,9 +10,9 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Sign Up</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+{#                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to#}
+{#                        additional content. This content is a little bit longer.</p>#}
+{#                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>#}
                     <a href="{% url 'users:signup' %}"
                        class="btn btn-primary stretched-link">Go somewhere</a>
                 </div>
@@ -23,9 +23,9 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Create Meet</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+{#                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to#}
+{#                        additional content. This content is a little bit longer.</p>#}
+{#                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>#}
                     <a href="{% url 'blog:meet-create' %}"
                        class="btn btn-primary stretched-link">Go somewhere</a>
                 </div>
@@ -36,9 +36,9 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Create Post</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+{#                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to#}
+{#                        additional content. This content is a little bit longer.</p>#}
+{#                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>#}
                     <a href="{% url 'blog:post-create' %}"
                        class="btn btn-primary stretched-link">Go somewhere</a>
                 </div>
@@ -49,10 +49,23 @@
 
                 <div class="card-body">
                     <h5 class="card-title">Reset Password</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>
+{#                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to#}
+{#                        additional content. This content is a little bit longer.</p>#}
+{#                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>#}
                     <a href="{% url 'users:reset' %}"
+                       class="btn btn-primary stretched-link">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 mt-4">
+            <div class="card  h-100">
+
+                <div class="card-body">
+                    <h5 class="card-title">Meets</h5>
+{#                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to#}
+{#                        additional content. This content is a little bit longer.</p>#}
+{#                    <p class="card-text"><small class="text-muted"> Last updated 3 mins ago</small></p>#}
+                    <a href="{% url 'blog:meet-list' %}"
                        class="btn btn-primary stretched-link">Go somewhere</a>
                 </div>
             </div>
